--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,13 @@
         <!-- Local files and metadata -->
         <link rel="stylesheet" href="/dist/bundle.css"/>
         <link rel="icon" type="image/png" href="/dist/images/icons/favicon.png"/>
-        <title>Redux Boilerplate</title>
+        <title>Castamatch</title>
 
         <!-- SEO, UI/UX -->
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="description" content="React Redux Boilerplate (JavaScript edition)" />
+        <meta name="description" content="Castamatch: Livestream every game, save every replay." />
         <link rel="manifest" href="/manifest.json">
     
         <!-- Fonts -->
