Update page loader

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,9 @@
 
         <div class="page-loader" data-loading=true data-loaded=false>
             <div>
-                <img src="/dist/images/icons/favicon.png" alt="loading"/>
+                <div class="page-loader__1"></div>
+                <div class="page-loader__2"></div>
+                <div class="page-loader__3"></div>
             </div>
         </div>
 
