Remove unneeded imports

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         <link rel="manifest" href="/manifest.json">
     
         <!-- Fonts -->
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500&display=swap" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&display=swap" />
 
         <!-- Page Loader -->
         <link rel="stylesheet" href="/dist/page-loader.css" />
@@ -31,12 +31,6 @@
             </div>
         </div>
 
-        <div class="react-config">
-            <!-- Import React -->
-            <script src="https://unpkg.com/react@16.0.0/umd/react.development.js"></script>
-            <script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.development.js"></script>
-            <script src="/dist/bundle.js"></script>
-            <!-- End import React -->
-        </div>
+        <script src="/dist/bundle.js"></script>
     </body>
 </html>
