update page loader

--- a/public/index.html
+++ b/public/index.html
@@ -23,12 +23,12 @@
     <body>
         <main id="app"></main>
 
-        <div class="page-loader" data-loading=true data-loaded=false>
-            <div>
-                <div class="page-loader__1"></div>
-                <div class="page-loader__2"></div>
-                <div class="page-loader__3"></div>
-            </div>
+        <div class="page_loader" data-loading="true" data-loaded="false">
+            <div class="page_loader1"></div>
+            <div class="page_loader2"></div>
+            <div class="page_loader3"></div>
+            <div class="page_loader4"></div>
+            <div class="page_loader5"></div>
         </div>
 
         <script src="/dist/bundle.js"></script>
