add flv playing functionality

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,10 @@
             <div class="page_loader5"></div>
         </div>
 
+        <!-- React -->
         <script src="/dist/bundle.js"></script>
+
+        <!-- FLV Stream player support -->
+        <script src="https://cdn.bootcss.com/flv.js/1.5.0/flv.min.js"></script>
     </body>
 </html>
