add server proxy

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,10 @@
     </head>
 
     <body>
+        <!-- FLV Stream player support -->
+        <script src="https://cdn.bootcss.com/flv.js/1.5.0/flv.min.js"></script>
+
+        <!-- React entry point -->
         <main id="app"></main>
 
         <div class="page_loader" data-loading="true" data-loaded="false">
@@ -33,8 +37,5 @@
 
         <!-- React -->
         <script src="/dist/bundle.js"></script>
-
-        <!-- FLV Stream player support -->
-        <script src="https://cdn.bootcss.com/flv.js/1.5.0/flv.min.js"></script>
     </body>
 </html>
